--- a/src/main/frontend/src/index.scss
+++ b/src/main/frontend/src/index.scss
@@ -68,6 +68,12 @@ code {
 .pit {
   flex: 1;
   border-radius: 40%;
+
+  &:hover:not([data-disabled="true"]) {
+    box-shadow: inset 0 0 22px rgba(0, 0, 0, .5);
+    background: #61dafb;
+    color: #23282d;
+  }
 }
 
 [data-player="1"] .row.player-1 .pit,
