Remove unnecessary wrapper tag

--- a/src/main/frontend/src/index.scss
+++ b/src/main/frontend/src/index.scss
@@ -56,7 +56,7 @@ code {
   box-shadow: inset 0 0 2px rgba(0, 0, 0, .5);
   cursor: default;
 
-  p::selection {
+  &::selection {
     background: transparent;
   }
 }
